--- a/intro.tex
+++ b/intro.tex
@@ -250,15 +250,15 @@ This book contains an introduction, critical edition and annotated translation o
 The oldest dated manuscript of the \textit{Yogatattvabindu} \getsiglum{N1}\footnote{For a description of the manuscript see  p.\pageref{n1description}.} was written in Nepal \textit{saṃvat} 837, which is 1716 CE. Since the text of this manuscript is missing a significant and lengthy passage (ca. 25\% of the entire text) and contains various corruptions, one can assume that some time had passed from the original composition for the transmission to deteriorate to this extent. Therefore, it is likely that the work was composed at least a few decades before the creation of this Nepalese manuscript, perhaps sometime in the 17th century. The discovery that Sundaradeva's \textit{Haṭhasaṅketacandrikā} quotes a lengthy passage of the \textit{Yogatattvabindu} without attribution confirms this suspicion. The passages quoted from the \textit{Yogatattvabindu} include the teachings on the sixteen \textit{ādhāra}s\footnote{\citetitle{hathasamketacandrikajodhpur} (ms. no. 2244, f. 95r l. 3 -- f. 96r l. 4).} and the teachings on Lakṣyayoga and its subtypes.\footnote{\citetitle{hathasamketacandrikajodhpur} (ms. no. 2244, f. 124r l. 7 -- f. 125r l. 3).} The dating of the \textit{Haṭhasaṅketacandrikā} just recently had to be revised due to the discovery that some first-hand notes surrounding the main text of the Ujjain \textit{Yogacintāmaṇi} were in all likelihood borrowed from Sundaradeva's \textit{Haṭhasaṅketacandrikā}.\footnote{Cf. \citeauthor{birch2024} (2024:52-54).} \citeauthor{birch2018proliferation} (2018) dated the Ujjain \textit{Yogacintāmaṇi} to 1659 CE.\footnote{Cf. \citeauthor{birch2018proliferation} (2018: p.50 n. 111).} Thus, the \textit{terminus ante quem} for the compilation of the \textit{Haṭhasaṅketacandrikā} is 1659 CE which automatically makes it also the \textit{terminus ante quem} for the \textit{Yogatattvabindu} and the \textit{Yogasvarodaya}, due to the fact that Sundaradeva quoted from the \textit{Yogatattvabindu} and Rāmacandra quoted from and rewrote the contents of the \textit{Yogasvarodaya}. Thus, we can safely assume that the \textit{Yogatattvabindu} was written in the course of the first half of the 17th century or earlier. Because of that Rāmancandra's main source text \textit{Yogasvarodaya} must have been written even earlier.
 
 \subsection{Implications for the dating of the \textit{Yogasvarodaya} and the \textit{Siddhasiddhāntapaddhati}}
-Furthermore, \citeauthor{mallinsononline2013} (2013) estimated the age of the \textit{Siddhasiddhāntapaddhati} to circa 1700. Due to the above-mentioned new date of the \textit{Haṭhasaṅketacandrikā} and because Rāmacandra extensively quotes from \textit{Siddhasiddhāntapaddhati} the new terminus \textit{terminus ante quem} for the dating of the \textit{Siddhasiddhāntapaddhati} likewise must be set to 1659 CE. Thus, the \textit{Siddhasiddhāntapaddhati} was also likely composed during the first half of the 17th century or even ealier.
+Furthermore, \citeauthor{mallinsononline2013}\footnote{Cf. \fullcite{mallinsononline2013}.} estimated the age of the \textit{Siddhasiddhāntapaddhati} to circa 1700. Due to the above-mentioned new date of the \textit{Haṭhasaṅketacandrikā} and because Rāmacandra extensively quotes from \textit{Siddhasiddhāntapaddhati} the new terminus \textit{terminus ante quem} for the dating of the \textit{Siddhasiddhāntapaddhati} likewise must be set to 1659 CE. Thus, the \textit{Siddhasiddhāntapaddhati} was also likely composed during the first half of the 17th century or even ealier.
 
 \section{Kriyāyoga}
 
-Kriyāyoga\footnote{See section II. on p.\pageref{kriyayogastart}-\pageref{kriyayogaend}.} is the first Yoga within the list of fifteen Yogas presented by Rāmacandra and his source text \textit{Yogasvarodaya}. Remarkably, Nārāyaṇatīrtha also positions Kriyāyoga at the first position within the list of 15 Yogas in his \textit{Yogasiddhāntacandrikā}. Sundardās, on the other hand, omits Kriyāyoga within his taxonomy.
+Kriyāyoga\footnote{See section II. on p.\pageref{kriyayogastart}-\pageref{kriyayogaend}.} is the first Yoga within the list of fifteen Yogas presented by Rāmacandra and his source text \textit{Yogasvarodaya}. Remarkably, Nārāyaṇatīrtha also positions Kriyāyoga at the first position within the list of fifteen Yogas in his \textit{Yogasiddhāntacandrikā}. Sundardās, on the other hand, omits Kriyāyoga within his taxonomy.
 
-\subsection{The concept of Kriyāyoga in the \textit{Yogatattvabindu} and \textit{Yogasvarodaya}}
+\subsection{The concept of Kriyāyoga in the \textit{Yogatattvabindu}}
 
-Since Rāmacandra refers to all fifteen Yogas as variants of Rājayoga in his initial definition of Yoga, and no explicit hierarchy is recognisable from his formulations in the text, all variants of Rājayoga appear to have been regarded by him as equally effective. All Yogas aim towards the same goal: long-term durability of the body (\textit{bahutarakālaṃ śarīrasthitiḥ}). The positioning of Kriyāyoga does not initially provide any information about the efficiency or the assignment of differently talented practitioners to a particular type of Yoga, as was the case in the older fourfold taxonomies.\footnote{According to \citetitle{amaraugha2024}\textit{prabodha} 18-24, Mantrayoga is best suited for the weak, Layayoga for the average, Haṭhayoga for the talented and Rājayoga for the exceptionally talented practitioner. In \citetitle{datta2024} 14, one finds the statement that the lowest practitioner should perform mantra yoga, which is then also referred to as the lowest Yoga. \citetitle{mallinson2007} 12-28 expands this fourfold scheme of Yogas and practitioners with a temporal dimension. The weak practitioner needs twelve years to succeed with Mantrayoga, the average practitioner needs eight years with Laya, the able practitioner six years with Haṭha and the exceptional practitioner three years with Rājayoga} Implicit hierarchical aspects are nevertheless present - although all Yoga types are a type of Rājayoga, Rāmacandra nonetheless places Rājayoga in the final position of his taxonomy.
+Since Rāmacandra refers to all fifteen Yogas as variants of Rājayoga in his initial definition of Yoga, and no explicit hierarchy is recognisable from his formulations in the text, all variants of Rājayoga appear to have been regarded by him as equally effective. All Yogas aim towards the same goal: long-term durability of the body (\textit{bahutarakālaṃ śarīrasthitiḥ}). The positioning of Kriyāyoga does not initially provide any information about the efficiency or the assignment of differently talented practitioners to a particular type of Yoga, as was the case in the older fourfold taxonomies.\footnote{According to \citetitle{amaraugha2024}\textit{prabodha} 18-24, Mantrayoga is best suited for the weak, Layayoga for the average, Haṭhayoga for the talented and Rājayoga for the exceptionally talented practitioner. In \citetitle{datta2024} 14, one finds the statement that the lowest practitioner should perform mantra yoga, which is then also referred to as the lowest Yoga. \citetitle{mallinson2007} 12-28 expands this fourfold scheme of Yogas and practitioners with a temporal dimension. The weak practitioner needs twelve years to succeed with Mantrayoga, the average practitioner needs eight years with Laya, the able practitioner six years with Haṭha and the exceptional practitioner three years with Rājayoga} Implicit hierarchical aspects are nevertheless present - although all Yoga types are a type of Rājayoga, Rāmacandra nonetheless places Rājayoga in the final and topmost position of his taxonomy.
 The only apparent reason why Rāmacandra specifies Kriyāyoga as the first Yoga seems to be that his primary source text, whose content structure he largely follows,\footnote{see the chapter on ``structural inconsistencies'' on p.\pageref{struktur},} specifies this type of Yoga as the first.
 
 The passage on Kriyāyoga in the \textit{Yogatattvabindu} is relatively short. The four verses presented by Rāmacandra are quoted without attribution from the \textit{Yogasvarodaya}. A prose section repeats the content of the verses. By definition, Kriyāyoga in \textit{Yogatattvabindu} is ``liberation through [mental] action'' (\textit{kriyāmuktir ayaṃ yogaḥ}). In contrast to Rāmacandra's worldly definition of Rājayoga and its subcategories, here, liberation (\textit{mukti}) overrides this initial goal. In addition, the practitioner achieves ``success in one's own body'' (\textit{svapiṇḍe siddhidāyakaḥ}). The method of Kriyāyoga involves restraining any [mental] wave before an action. This restraint consists of reducing negative [mind-]waves and cultivating positive ones. Noticeably, the number of negative waves significantly exceeds the number of positive waves.
@@ -295,7 +295,9 @@ The passage on Kriyāyoga in the \textit{Yogatattvabindu} is relatively short. T
 \end{table}
 
 The one who cultivates positive [mind-]waves and reduces the negative is called a \textit{kriyāyogī}. In the prose passage of the section, the term \textit{bahukriyāyogi} is used. The term is unprecedented in the rest of the yoga literature and presumably intends to express many reduced and cultivated waves.
-\newpage 
+\newpage
+
+\subsection{The concept of Kriyāyoga in the \textit{Yogasvarodaya}}
 A closer examination of the Kriyāyoga section in the \textit{Yogasvarodaya} reveals Rāmancandra's reductionism since he excludes significant aspects of the original concept of the \textit{Yogasvarodaya}'s Kriyāyoga.
 
 %YK 1.214-216
@@ -337,49 +339,32 @@ Whoever does not experience these is called a Kriyāyogī.
 (6) He alone, the wise one, the lord, through the destruction of impetuous [behaviour]
 who performs the liberation through action[s] is liberated. This Rājayoga is the giver of liberation.
 
-\textit{yāvan mano layaṃ yāti kṛṣṇe svātmani cinmaye} | \\
-\textit{bhaved iṣṭamanā mantrī japahomau samabhyaset} || 7 ||(om. YSv)
+\textit{yāvan mano layaṃ yāti kṛṣṇe svātmani cinmaye} | \\ 
+\textit{bhaved iṣṭamanā mantrī japahomau samabhyaset} || 7 ||\footnote{7ab \approx \citetitle{rudrayamala1937} 38.58cd.}(om. YSv) 
 
 (7) Until the mind enters absorption [and] would be in Kṛṣṇa, in one's own self, filled with consciousness,
-the mantra practitioner should practise recitation and fire sacrifice with an aspiring mind. 
+the mantra practitioner (\textit{mantrin}) should practise recitation and fire sacrifice with an aspiring mind. 
 
 \textit{vidite paratattve tu samastair niyamair alam} |\\
-\textit{tālavṛntena kiṃ kāryaṃ lavdhe malayamārute} || 8 || (om. YSv)
+\textit{tālavṛntena kiṃ kāryaṃ lavdhe malayamārute} || 8 ||\footnote{\approx \citetitle{kularnavatantra} 9.28 \& \citetitle{yuktabhavadeva} 1.80.} (om. YSv) 
 
 (8) When the highest principle has been realised through all the \textit {niyama}s, as is proper,
 Why should one wave the palm frond when the wind from the Himalayas has already reached?
 
-\textit{tāvat karmmāṇi kurvanti yāvajjñānaṃ na vidyate} |\\
-\textit{jñāne jāte pareśāni karmākarma na vidyate} || 9 ||(om. YSv)
+\textit{tāvat karmmāṇi kurvanti yāvajjñānaṃ na vidyate} |\\ 
+\textit{jñāne jāte pareśāni karmākarma na vidyate} || 9 ||(om. YSv) 
 
 (9) As long as [regular?] actions are performed, so long realisation is unknown.
 When knowledge ensues, oh, Supreme Goddess, neither action nor non-action is known.
 \end{quote}
 
-Diese Verse\footnote{Die hier verwendete Nummerierung wurde von mir aus praktischen Gründen eingeführt und stimmt nicht mit der Originalnummerierung der Verse in den Zitaten der Quelltexten überein. Die \textit{Prāṇatoṣiṇī} nummiert die Verse überhaupt nicht. Die Verse finden sich in der Druckausgabe der \textit{Prāṇatoṣiṇī} auf S. 831. Die hiesigen Verse sind in der \textit{Yogakarṇikā} mit der Nummerierung 1.209-216 und befinden sich in der Edition auf S. 17.} entstammen den beiden einzigen derzeit vorhanden Quellen des \textit{Yogasvarodaya}, nämlich den Zitaten aus der \textit{Prāṇatoṣiṇī}\footnote{Ein sehr großer Teil des \textit{Yogasvarodaya} ist mit mit Quellangabe (\textit{yogasvarodaya} zitiert.} und der \textit{Yogakarṇikā}\footnote{Im Normalfall zitiert die \textit{Yogakarṇikā} ihre Quellen. Diese Passage ist einer der wenigenein Ausnahmefall bei dem die Verse aus dem \textit{Yogasvarodaya} ohne Quellangabe übernommen worden sind. Diese Passage endet allerdings nach Vers 1.216 mit ``\textit{iti yogasaṅketāḥ |}''.} Die Zitate stimmen größtenteils überein, allerdings unterscheiden sich die letzten Verse der Passage voneinander. Es ist nicht auszuschließen, dass insbesondere die letzten drei Verse der \textit{Yogakarṇikā} aus einer anderen Quelle stammen. Sie sind jedoch inhaltlich so eng mit den vorangehenden Verse verwoben, dass dieses Szenario ohne Weiteres als unwahrscheinlich zu gelten hat.
+These verses\footnote{The numbering used here was introduced by me for practical reasons and does not correspond to the original numbering of the verses in the citations of the source texts. The \textit{Prāṇatoṣiṇī} does not number the verses at all. The verses can be found in the printed edition of the \textit{Prāṇatoṣiṇī} on p. 831. The verses here are in the \textit{Yogakarṇikā} with the numbering 1.209-216 and can be found in the edition on p. 17.} stem from the only two currently available sources of the \textit{Yogasvarodaya}, namely the quotations from the \textit{Prāṇatoṣiṇī}\footnote{A considerable part of the \textit{Yogasvarodaya} is quoted with source reference (\textit{yogasvarodaye}).} and the \textit{Yogakarṇikā}.\footnote{Normally the \textit{Yogakarṇikā} quotes its sources. This passage is one of the few exceptional cases in which the verses have been taken from the \textit{Yogasvarodaya} without citing the source. However, this passage ends after verse 1.216 with ``\textit{iti yogasaṅketāḥ |}''.} The quotations of both texts essentially correspond, but the last verses of the passage differ. It cannot be ruled out that the last three verses of the \textit{Yogakarṇikā} in particular come from a different source and were not present within the \textit{Yogasvarodaya}. However, their content is so closely interwoven with the preceding verses that this scenario can be considered unlikely.
 
-Der offensichtliche Hauptunterschied zum Kriyāyoga das Rāmacandra aus diesen Versen konstruiert hat ist die unmittelbar am Anfang der Verse genannte Definition derjeniger Handlungen (\textit{kriyāḥ}), aus denen Kriyāyoga sich dann primär zusammensetzt, nämlich aus (1) Meditation, (2) ritueller Gottesverehrung, (3) Gaben, (4) Rezitation und (5) Feueropferung etc. Es folgt der Teil, den auch Rāmacandra in seiner Abhandlung von Kriyāyoga übernimmt. Während Rāmacandra die in Tabelle \ref{tab:waves} genannten Elemente als Wellen (\textit{kallola}) des Geistes deklariert, die es zu kultivieren und zu reduzierenden gilt, so werden diese Elemente im \textit{Yogasvarodaya} als die einer Handlung vorangehenden Intentionen (\textit{saṅkalpa}) konzeptualisiert, welche in ihrer Vollständigkeit vor jeder Ausübung der von ihm genannten Tätigkeiten beachtet werden sollen. Diese fünf Handlungen werden im sechten Vers, dessen Inhalt konsequenterweise ebenfalls von Rāmacandra ignoriert wird, dann als Mittel zur der Befreiung aufgegriffen.
+The main difference to the Kriyāyoga that Rāmacandra has constructed from these verses is the definition of the actions (\textit{kriyāḥ}) mentioned immediately at the beginning of the verses, of which the actions (\textit{kriyā}s) of Kriyāyoga is then predominantly composed, namely of (1) meditation, (2) ritual worship of God, (3) offerings, (4) recitation and (5) fire sacrifice, etc. Furthermore, while Rāmacandra declares the elements mentioned in the table \ref{tab:waves} as waves (\textit{kallola}) of the mind which are either required to be cultivated or reduced before any action is executed, the same elements are conceptualised in the \textit{Yogasvarodaya} as the intentions (\textit{saṅkalpa}) preceding the previously defined actions (\textit{kriyā}s), which should be observed.
 
-In den drei diese Sektion abschließenden Versen, welche in der \textit{Yogakarṇikā} überliefert sind, wird der Übende sogar als \textit{mantrin} bezeichnet, und soll bis zum Eintreten in die Absorption (\textit{laya}) Rezitation und Feueropfer ausführen.
+In the three verses concluding this section, which are only handed down in the \textit{Yogakarṇikā}, the practitioner is referred to as \textit{mantrin} and should perform recitation and fire offerings until entering absorption (\textit{laya}).
 
-Dieses Konzept des Kriyāyoga im \textit{Yogasvarodaya} scheint eine deutliche Anlehnung an das Konzept des \textit{kriyāpada}\footnote{Siehe z.B. \citeauthor{ganesan2016saiva} (2016) und \citetitle{mrgendragama} (Ed. pp. 1-205).}  der Śaiva \textit{āgama}s zu sein. Diesen Sammlugen verschiedener tantrischer Traditionen, verfasst in Sanskrit oder Tamil, in denen Kosmologie, Epistomologie, philosophische Lehren, diverse Praktiken, wie Meditation oder Yoga, Mantrarezitation, Götterverehrung usw.\footnote{\citeauthor{lipner2004} 2004: 27-28.} beschrieben werden, bestehen in der Regel aus vier Abschnitten (\textit{pada}s): Dem \textit{jñānapada} (Wissensabschnitt), dem \textit{yogapada} (Yogaabschnitt), \textit{kriyāpada} (Handlungsabschnitt) und \textit{caryāpada} (Verhaltensabschnitt). Es muss davon ausgegangen werden, dass es sich nicht um einen Zufall handelt, dass \textit{jñāna°}, \textit{kriyā°} und \textit{caryā°} als jeweils eigene Yogakategorie in der Taxonomie der fünfzehn Yogas integriert wurden. Der \textit{kriyāpada} ist derjenige Abschnitt eines \textit{āgama} in dem Regeln und Praktiken für die Durchführung verschiedener Rituale wie z.B. Initiation (\textit{dīkṣa}), Zeremonien und Götterverehrung beschrieben werden. 
-
-Querverweis zu Zusammenfassung des Kapitels in Edition! 
-
-Śaiva-Āgama. Authoritative texts of Śaivism, the earliest being written between 400–800 CE. The texts deal with Śaiva liturgy which involves nyāsa, mudrā, mantra, the construction of yantras or maṇḍalas and visualization (dhyāna), the construction of shrines and temples, and festivals. Interest in philosophy is somewhat limited and is mainly concerned with speculation on the power of speech and the tattvas. Initiation (dīkṣā) is important in the texts. The Āgamas theoretically follow a fourfold structure of jñāna, yoga, kriya, and carya padas, though this pattern is seldom strictly adhered to.
-
-
-The Agamas (Devanagari: आगम, IAST: āgama) (Tamil: ஆகமம், romanized: ākamam) are a collection of several Tantric literature and scriptures of Hindu schools.[1][2] The term literally means tradition or "that which has come down", and the Agama texts describe cosmology, epistemology, philosophical doctrines, precepts on meditation and practices, four kinds of yoga, mantras, temple construction, deity worship and ways to attain sixfold desires.[1][3] These canonical texts are in Tamil[4][5] and Sanskrit.[1]
-
-    Jnana pada, also called Vidya pada[12] – consists of doctrine, the philosophical and spiritual knowledge, knowledge of reality and liberation.
-    Yoga pada – precepts on yoga, the physical and mental discipline.
-    Kriya pada – consists of rules for rituals, construction of temples (Mandir); design principles for sculpting, carving, and consecration of idols of deities for worship in temples;[26] for different forms of initiations or diksha. This code is analogous to those in Puranas and in the Buddhist text of Sadhanamala.[12]
-    Charya pada – lays down rules of conduct, of worship (puja), observances of religious rites, rituals, festivals and prayaschittas.
-
-
-hier!!!! + pdf mit Original! super! 
-https://www.wisdomlib.org/hinduism/essay/sivaprakasam-study/d/doc1210755.html#note-t-234177
-
+Thus, this concept of Kriyāyoga in the \textit{Yogasvarodaya} is a clear reference to the \textit{kriyāpada}\footnote{See e.g. \citeauthor{ganesan2016saiva} (2016) and \citetitle{mrgendragama} (Ed. pp. 1-205).} of the Śaiva \textit{āgama}s. The Śaiva \textit{āgama}s are collections of various tantric traditions, written in Sanskrit or Tamil, in which cosmology, epistemology, philosophical teachings, various practices such as meditation or yoga, mantra recitation, worship of the gods, etc. are described. These texts usually consist of four sections (\textit{pāda}s): The \textit{jñānapāda} (knowledge section), the \textit{yogapāda} (yoga section), \textit{kriyāpada} (action section) and \textit{caryāpada} (behaviour section). It can be no coincidence that \textit{jñāna°}, \textit{kriyā°} and \textit{caryā°} were each integrated as a separate yoga category within the taxonomy of the fifteen yogas\footnote{see p.\pageref{intro}.}. The \textit{kriyāpada} is the section of a Śaiva \textit{āgama} that describes rules and practices for the performance of various rituals such as the significant initiation (\textit{dīkṣa}), ceremonies and worship of the gods. Additionally, \textit{prāṇāyāma} techniques and meditations are often found as parts of these rituals. There are also explanations of the nature of \textit{mudrā}s, \textit{maṇḍala}s and \textit{mantra}s. Furthermore, various characteristics of different types of Śaiva initiates\footnote{These are \textit{samayin, putraka, sādhaka, ācārya,} and \textit{astrābhiṣeka}.} can be found here.\footnote{See \citeauthor{ganesan2016saiva} (2016) for a general overview of the four \textit{pāda}s. One of the few Śaiva \textit{āgama}s that has been edited and translated into a Western language (French) is the \citetitle{mrgendragama}. For this see \citeauthor{mrgendragama} (1962) \& \citeauthor{mrgendragamabrunner} (1985).} The \textit{kriyā}s mentioned at the beginning of the \textit{Yogasvarodaya} - meditation, ritual veneration, donation, recitation, fire sacrifice, etc. have hardly deniable parallels to the \textit{kriyāpada}s of the Śaiva \textit{āgama}s and thus could have their reception-historical roots precisely there. The other part, however, which describes the cultivation or reduction of certain intentions preceding all actions (\textit{saṅkalpa}) or [mental] waves (\textit{kallola}), I have not yet been able to locate in the Śaiva \textit{āgama}s.
 %iti yogasaṅketāḥ।
 %https://www.wisdomlib.org/hinduism/essay/sivaprakasam-study/d/doc1210756.html
 %-> Carya,Kriya,Yoga and Jnana! 
@@ -397,23 +382,21 @@ https://www.wisdomlib.org/hinduism/essay/sivaprakasam-study/d/doc1210755.html#no
 %    These four padas together form the comprehensive spiritual framework of the Shaiva Siddhanta tradition.
 \subsection{The concept of Kriyāyoga in the \textit{Yogasiddhāntacandrikā}}
 
-The Kriyāyoga in Nārāyaṇatīrtha's commentary on \textit{Pātañjalayogaśāstra} entitled \textit{Yogasiddhāntacandrikā} presents Kriyāyoga as the first of his fifteen yogas, which he locates in Pātañjalayoga. The term occurs in the context of \textit{Pātañjalayogaśāstra} 2.1. According to the introduction to this Sūtra, in the \textit{bhāṣya} part of the\textit{Pātañjalayogaśāstra}, Kriyāyoga is a means by which someone with a distracted mind can also attain Yoga (\textit{vyutthitacitto 'pi yogayuktaḥ}). In the Sūtra itself, Kriyāyoga is defined as follows:
+The Kriyāyoga in Nārāyaṇatīrtha's commentary on \textit{Pātañjalayogaśāstra} entitled \textit{Yogasiddhāntacandrikā} presents Kriyāyoga as the first of his fifteen Yogas, which he locates in Pātañjalayoga. The term Kriyāyoga occurs in \textit{Pātañjalayogaśāstra} 2.1. According to the introduction to this Sūtra, in the \textit{bhāṣya}-part of the\textit{Pātañjalayogaśāstra}, Kriyāyoga is the means by which someone with a distracted mind can also attain Yoga (\textit{vyutthitacitto 'pi yogayuktaḥ}). In the \textit{sūtra} itself, Kriyāyoga is defined as follows:
 \begin{quote}  
   \textit{tapaḥsvādhyāyeśvarapraṇidhānāni kriyāyogaḥ} |\\
   \citetitle{yogasutra} 2.1  \\
 \end{quote}
 
 Kriyāyoga, or ``yoga through action'', consists of three elements. Namely, abstinence (\textit{tapas}), which according to \textit{bhāṣya} should be practised both mentally and physically, the repetition of \textit{mantra}s or the study of sacred literature (\textit{svadhyāya}) and devotion to God (\textit{īśvarapraṇidhāna}).
-
-According to \citetitle{yogasutra} 2.2, these three elements of Kriyāyoga should lead the practitioner to attain Samādhi by reducing the so-called \textit{kleśa}s. This explanatory model is also used by Nārāyaṇatīrtha (\citeauthor{yogacandrika}, 2000:71). The five \textit{kleśa}s consist of ignorance (\textit{avidyā}), self-centredness (\textit{asmitā}), attachment (\textit{rāga}), aversion (\textit{dveṣa}) and fear of death (\textit{abhiniveśa}). 
+According to \citetitle{yogasutra} 2.2, these three elements of Kriyāyoga should lead the practitioner to attain \textit{samādhi} by reducing the so-called \textit{kleśa}s. This explanatory model is also used by Nārāyaṇatīrtha (\citeauthor{yogacandrika}, 2000:71). The five \textit{kleśa}s consist of ignorance (\textit{avidyā}), self-centredness (\textit{asmitā}), attachment (\textit{rāga}), aversion (\textit{dveṣa}) and fear of death (\textit{abhiniveśa}). 
+All three main components of Patañjali's Kriyāyoga are not mentioned in the \textit{Yogatattvabindu} and \textit{Yogasvarodaya}. Nevertheless, a practice similar to the reduction of the \textit{kleśa}s can also be found here. Although the specific fear of death (\textit{abhiniveśa}) is not mentioned, the more general term for fear (\textit{bhaya}) is cited.
+The Kriyāyoga in \textit{Yogatattvabindu} and \textit{Yogasvarodaya} could, therefore, be perhaps regarded as a degenerated or simplified variant of the Pātañjalean model, which restricts itself predominantly to the aspect of the reduction of negative waves of the mind, which is comparable to the reduction of \textit{kleśa}s and adds the aspect of cultivating positive ``waves'' to be mix. In both systems, Kriyāyoga is a means for liberation.
 
 \subsection{Kriyāyoga in the complex late-medieval Yoga taxonomies}
 
-All three main components of Patañjali's Kriyāyoga are not mentioned in the \textit{Yogatattvabindu} and \textit{Yogasvarodaya}. Nevertheless, a practice similar to the reduction of the \textit{kleśa}s can also be found here. Although the specific fear of death (\textit{abhiniveśa}) is not mentioned, the more general term for fear (\textit{bhaya}) is cited.
+The analysis of Kriyāyoga within the taxonomies of fifteen yogas shows two distinct models. One is Nārāyaṇatīrtha's model, which draws directly on the Kriyāyoga of \textit{Pātañjalayogaśāstra}. Śivaitic influences characterise the other model of Kriyāyoga. The precisely defined \textit{kriyā}s show parallels to the \textit{kriyāpāda}s of the Śaiva \textit{āgama}s, whereby the core practice of reducing and cultivating specific mental configurations before any action is not entirely dissimilar to the Kriyāyoga of \textit{Pātañjalayogaśāstra}. The observation that the \textit{kriyā}-, \textit{caryā-} \textit{jñānayoga}, an allusion to the \textit{kriyā}-, \textit{caryā-} \textit{jñānapāda}s of the Śaiva \textit{āgama}s, shows that Nārāyaṇatīrtha, as a proponent of the \textit{Pātañjalayoga}, could not possibly have been the originator of the fifteenfold taxonomy, but rather that this taxonomy of the fifteen yogas had achieved such local popularity in the discourse of the time and that Nārāyaṇatīrtha perhaps wanted to convince his readers that Patañjali's \textit{Yogaśāstra} is the Yoga \textit{par excellence} and all varieties of Yogas are in truth already present in the ``classical'' system of Patañjali.  
 
-The Kriyāyoga in \textit{Yogatattvabindu} and \textit{Yogasvarodaya} could, therefore, be perhaps regarded as a degenerated or simplified variant of the Pātañjalean model, which replaces the three main components \textit{tapas}, \textit{svadhyāya} and \textit{īśvarapraṇidhāna} with and instead restricts itself entirely to the aspect of \textit{kleśa} reduction. The \textit{Yogatattvabindu} extends the more ancient list of \textit{kleśa}s with various terms and adds positive ``waves'' to be mix. In both discussed systems, Kriyāyoga is a means for liberation.
-
-It is likely that there is a historical connection between two models that is primarily transmitted through the tantric Shivaite traditions. This is supported by the general observation that the roots of Rājayoga reach back to shaivaite-Tantric traditions\footnote{Cf. \citeauthor{birch2019saiva} (2019).}. Additionally,  and earlier texts of Rājayoga in which the term \textit{kriyāyoga} is mentioned.
 
 \end{document}
 
@@ -477,7 +460,7 @@ Similarities between Yoga taxonomies of Rāmacandra's \textit{Yogatattvabindu}, 
 15. & \textit{rājayoga} & - [\textit{rājayoga}]& \textit{premabhaktiyoga} & - \\
 \end{tabularx}
 
-The authenticity of the list specifying the fifteen Yogas at the beginning of the text is ambiguous. This is due to the discrepancy between the structure of the Yogas presented in the text and the order presented in the list. For example, the text commences with a description of \textit{kriyāyoga} and goes on to describe \textit{siddhakuṇḍaliniyoga} and then mentions \textit{mantrayoga} without adhering to the order presented in the list. This incongruity raises questions as to why the text structure deviates from the list. However, the reference to \textit{jñānotpattav upāyaḥ} may provide some insight into why \textit{jñānayoga} is included as the second \textit{yoga} in the list. To reconcile these apparent inconsistencies, there are several possible explanations: 1) The text is severely corrupted. 2) The list was added by a different hand at a later time. 3) The term \textit{jñānayoga} is included as a result of the practice of \textit{siddhakuṇḍalinīyoga}, which is said to generate knowledge through the central channel, as stated in the text. These explanations may be combined to provide a comprehensive understanding of the situation.
+The authenticity of the list specifying the fifteen Yogas at the beginning of the text is ambiguous. This is due to the discrepancy between the structure of the Yogas presented in the text and the order presented in the list. For example, the text commences with a description of \textit{kriyāyoga} and goes on to describe \textit{siddhakuṇḍaliniyoga} and then mentions \textit{mantrayoga} without adhering to the order presented in the list. This incongruity raises questions as to why the text structure deviates from the list. However, the reference to \textit{jñānotpattav upāyaḥ} may provide some insight into why \textit{jñānayoga} is included as the second \textit{yoga} in the list. To reconcile these apparent inconsistencies, there are several possible explanations: 1. The text is severely corrupted. 2. The list was added by a different hand at a later time. 3. The term \textit{jñānayoga} is included as a result of the practice of \textit{siddhakuṇḍalinīyoga}, which is said to generate knowledge through the central channel, as stated in the text. These explanations may be combined to provide a comprehensive understanding of the situation.
 
 \note[type=philcomm, labelb=_1e, labele=_1e, lem={urayogaḥ}]{The term \textit{urayoga} in YSv (PT) is uncertain. Birch suggests it might result from a corruption of \textit{lakṣyayoga} since it appears in the text. However, explaining the origin of the corruption is complex. Sellmer speculates it could be an abbreviation of \textit{uragayoga} (``Snake Yoga''), possibly a synonym for \textit{kuṇḍalinīyoga}, but this is problematic as the term is unattested elsewhere.} 
 
