worked on intro

--- a/bindu.bib
+++ b/bindu.bib
@@ -274,6 +274,15 @@ address={Lonavla},
   url = {https://archive.org/details/sanskritgrammari00whituoft},
 }
 
+@book{autobioyogi, 
+title={Autobiography of a Yogi}, 
+author={Paramahaṃsa Yogānanda}, 
+year={1946}, 
+publisher={The Philosophical Library, Inc.}, 
+address={New York},
+}
+
+
 @book{anandakanda,
   title = {Ānandakanda},
   editor = {S. V. Radhakrishna Sastri},
@@ -303,6 +312,16 @@ address={Lonavla},
   publisher={Verlag der Weltreligionen im Insel Verlag},
   address={Frankfurt am Main and Leipzig},
   keywords={printsource},
+}
+
+@inbook{colebrooke2014,
+  title        = {Henry Thomas Colebrooke and the Western “Discovery” of the Yoga Sutra},
+  booktitle    = {The Yoga Sutra of Patanjali: A Biography},
+  editor       = {David Gordon White},
+  address      = {New Jersey}, 
+  publisher    = {Princeton University Press},
+  year         = {2014},
+  pages        = {53-80},
 }
 
 @book{bäumernetra,
@@ -469,7 +488,8 @@ address={The Hague},
 @book{yogasutra,
   title={Pātañjalayogaśāstra},
   subtitle={Yoga Philosophy of Patañjali},
-  editor={Hariharānanda Āraṇya},
+  author={Hariharānanda Āraṇya},
+  editor={Mukerji, P.N.},
   year={1983},
   publisher={State University of New York Press},
   keywords={printsource},
@@ -1302,6 +1322,15 @@ keywords={printsource},
   address= {Leiden},
   keywords={seclit},
 }
+
+@book{penna2004, 
+title{Yogasiddhāntacandrikā of Nārāyaṇatīrtha [A Study]}, 
+author{Penna, Madhusudan}, 
+year={2004},
+publisher={Parimal Publications}, 
+address={Delhi}, 
+}
+
 
 @book{robson1988,
   title={Principles of Indonesian Philology},
