--- a/intro.bib
+++ b/intro.bib
@@ -1783,6 +1783,34 @@ keywords={seclit},
   url = {https://archive.org/details/sanskritgrammari00whituoft},
 }
 
+@inbook{colebrooke2014,
+  title        = {Henry Thomas Colebrooke and the Western “Discovery” of the Yoga Sutra},
+  booktitle    = {The Yoga Sutra of Patanjali: A Biography},
+  editor       = {David Gordon White},
+  address      = {New Jersey}, 
+  publisher    = {Princeton University Press},
+  year         = {2014},
+  pages        = {53-80},
+}
+
+
+@book{autobioyogi, 
+title={Autobiography of a Yogi}, 
+author={Paramahaṃsa Yogānanda}, 
+year={1946}, 
+publisher={The Philosophical Library, Inc.}, 
+address={New York},
+}
+
+@book{penna2004, 
+title{Yogasiddhāntacandrikā of Nārāyaṇatīrtha [A Study]}, 
+author{Penna, Madhusudan}, 
+year={2004},
+publisher={Parimal Publications}, 
+address={Delhi}, 
+}
+
+
 @incollection{ganesan2016saiva,
   author = {Ganesan, T.},
   title = {{Śaiva Āgamas: The Four Pādas and Thirty-six Tattvas}},
