--- a/preamble.tex
+++ b/preamble.tex
@@ -32,6 +32,13 @@
 \usepackage{microtype}
 \usepackage{lineno}
 
+\usepackage{tabularx}
+\usepackage{multirow}
+\usepackage[singlelinecheck=false]{caption}
+\usepackage{ragged2e}
+\usepackage{longtable}
+
+
 %\usepackage{bigfoot}
 %%% more functions
 \usepackage[dvipsnames]{xcolor}
